--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="button_task2_text">Задание 2</string>
     <string name="button_collect_input_text">Собрать ввод</string>
     <string name="text_input_hint">Ввести текст</string>
+    <string name="result_alert_title">Результат</string>
 </resources>
