task 1: add items selection on long click; add unselect items on click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="button_collect_input_text">Собрать ввод</string>
     <string name="text_input_hint">Ввести текст</string>
     <string name="result_alert_title">Результат</string>
+    <string name="empty_data">Данные отсутствуют</string>
 </resources>
